--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -263,3 +263,30 @@ tag_plugins:
     iconfont: //at.alicdn.com/t/font_2032782_8d5kxvn09md.js #参看https://akilar.top/posts/d2ebecef/
     carousel: https://npm.elemecdn.com/hexo-butterfly-tag-plugins-plus@latest/lib/assets/carousel-touch.js
     tag_plugins_css: https://npm.elemecdn.com/hexo-butterfly-tag-plugins-plus@latest/lib/tag_plugins.css
+
+
+  # 微信小程序使用种
+  restful:
+    # site 可配置为数组选择性生成某些属性
+    # site: ['title', 'subtitle', 'description', 'author', 'since', email', 'favicon', 'avatar']
+    site: true        # hexo.config mix theme.config
+    posts_size: 10    # 文章列表分页，0 表示不分页
+    posts_props: # 文章列表项的需要生成的属性
+      title: true
+      slug: true
+      date: true
+      updated: true
+      comments: true
+      path: true
+      excerpt: false
+      cover: true      # 封面图，取文章第一张图片
+      content: false
+      keywords: false
+      categories: true
+      tags: true
+    categories: true         # 分类数据
+    use_category_slug: false # Use slug for filename of category data
+    tags: true               # 标签数据
+    use_tag_slug: false      # Use slug for filename of tag data
+    post: true               # 文章数据
+    pages: false             # 额外的 Hexo 页面数据, 如 About
